[build-system]
requires = ["build", "wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pandahub"
version = "0.3.6"  # File format version '__format_version__' is tracked in __init__.py
authors=[
    { name = "Jan Ulffers", email = "jan.ulffers@iee.fraunhofer.de" },
    { name = "Leon Thurner", email = "leon.thurner@retoflow.de" },
    { name = "Jannis Kupka", email = "jannis.kupka@retoflow.de" },
    { name = "Mike Vogt", email = "mike.vogt@iee.fraunhofer.de" },
    { name = "Joschka Thurner", email = "joschka.thurner@retoflow.de" },
    { name = "Alexander Scheidler", email = "alexander.scheidler@iee.fraunhofer.de" },
]
description = "Data hub for pandapower and pandapipes networks based on MongoDB"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    # Add the specific Python versions supported here, e.g.:
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = [
    "network", "analysis", "optimization", "automation", "grid", "energy", "engineering", "simulation",
]

[project.urls]
Homepage = "https://github.com/e2nIEE/pandahub"
Documentation = "https://pandapipes.readthedocs.io"
Source = "https://github.com/e2nIEE/pandahub"
Repository = "https://github.com/e2nIEE/pandahub.git"
Issues = "https://github.com/e2nIEE/pandahub/issues"
Download = "https://pypi.org/project/pandahub/#files"
Changelog = "https://github.com/e2nIEE/pandahub/blob/develop/CHANGELOG.md"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
docs = ["numpydoc", "sphinx", "sphinx_rtd_theme", "sphinxcontrib.bibtex", "sphinx-pyproject"]
test = ["pytest", "pytest-xdist", "nbmake", "simbench", "line_profiler"]
all = [
    "numpydoc", "sphinx", "sphinx_rtd_theme", "sphinxcontrib.bibtex", "sphinx-pyproject",
    "pytest", "pytest-xdist", "nbmake", "simbench", "line_profiler",
]

[tool.setuptools.packages]
find = {}
