[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pandahub/__init__.py"

[project]
name = "pandahub"
description = "Data hub for pandapower and pandapipes networks based on MongoDB"
authors = [
    { name = "Jan Ulffers", email = "jan.ulffers@iee.fraunhofer.de" },
    { name = "Leon Thurner", email = "leon.thurner@retoflow.de" },
    { name = "Jannis Kupka", email = "jannis.kupka@retoflow.de" },
    { name = "Mike Vogt", email = "mike.vogt@iee.fraunhofer.de" },
    { name = "Joschka Thurner", email = "joschka.thurner@retoflow.de" },
    { name = "Alexander Scheidler", email = "alexander.scheidler@iee.fraunhofer.de" },
]

license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    # Add the specific Python versions supported here, e.g.:
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = [
    "network", "analysis", "optimization", "automation", "grid", "energy", "engineering", "simulation",
]
requires-python = ">=3.9"
dependencies = [
    "uvicorn>=0.24.0",
    "pandapower>=3.0",
    "pandapipes>=0.7.0",
    "pymongo>=4.9",
    "pydantic",
    "pydantic-settings",
    "simplejson",
    "requests",
    "pymongoarrow",
    "blosc",
]
dynamic = ["version"]

[project.optional-dependencies]
api = ["fastapi[standard-no-fastapi-cloud-cli]>=0.104.0", "fastapi-users[beanie]>=12.0"]

[project.urls]
Homepage = "https://github.com/e2nIEE/pandahub"
Documentation = "https://pandapipes.readthedocs.io"
Source = "https://github.com/e2nIEE/pandahub"
Repository = "https://github.com/e2nIEE/pandahub.git"
Issues = "https://github.com/e2nIEE/pandahub/issues"
Download = "https://pypi.org/project/pandahub/#files"
Changelog = "https://github.com/e2nIEE/pandahub/blob/develop/CHANGELOG.md"

[tool.ruff]
line-length = 120
